# brs_ctrl

./: README.md  pyproject.toml
assets/robot/r1_pro/: r1_pro.urdf
assets/robot/r1_pro/meshes/: t265_mount.stl  zed_mini_camera_mount.stl
brs_ctrl/data_recorder/: __init__.py  data_recorder.py
brs_ctrl/jetson/: __init__.py  pcd_fusion.py
brs_ctrl/joylo/: __init__.py  joylo.py
brs_ctrl/joylo/joycon/: __init__.py  joycon_calibration.yaml  joycon_interface.py
brs_ctrl/joylo/joylo_arms/: __init__.py  joylo_arms.py
brs_ctrl/joylo/joylo_arms/dxl/: base.py  constants.py  current_control.py  joint_impedance.py  position.py  position_control.py
brs_ctrl/kinematics/: __init__.py  r1_kinematics.py
brs_ctrl/robot_interface/: __init__.py  interfaces.py  utils.py
brs_ctrl/robot_interface/grippers/: __init__.py  base.py  galaxea_g1.py  inspire_hand.py
brs_ctrl/robot_interface/mobile_base/: __init__.py  odometry.py
brs_ctrl/utils/: __init__.py  array_tensor_utils.py  functional_utils.py  transform_utils.py  tree_utils.py  viz_utils.py
hardware/camera_mounts/: realsense_t265_mount.stl  zed_mini_mount.stl
ros_pkgs_launch_files/zed_wrapper/launch/: multicam_single_nodelet.launch
scripts/calibration/: calibrate_joycons.py
scripts/data_collection/: start_data_collection.py  visualize_realtime_pcd.py
scripts/jetson/: run_pcd_fusion_publisher.py
scripts/joylo/: h5test.py  joylo_move.py  r1_kine.py  r1_to_joylo.py  real_joylo.py  real_joylo_bilateral.py  sim_joylo.py  test.py  test_sim.py
scripts/so_100/: A1.urdf  a1x.urdf  so_100_test.py
(+1 files in other folders)
