[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brs_ctrl"
dynamic = ["version"]
dependencies = [
    "h5py",
    "pybullet",
    "tqdm",
]
requires-python = ">=3.11"
authors = [
  {name = "Yunfan Jiang", email = "yunfanj@cs.stanford.edu"},
]
maintainers = [
  {name = "Yunfan Jiang", email = "yunfanj@cs.stanford.edu"},
]
description = "The controller repository for BEHAVIOR-Robot-Suite: Streamlining Real-World Whole-Body Manipulation for Everyday Household Activities"
readme = "README.md"
keywords = ["Robotics", "Machine Learning", "Whole-Body Manipulation", "Mobile Manipulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Researchers, Developers",
    "Topic :: Scientific/Engineering :: Robotics",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://behavior-robot-suite.github.io/"


[tool.setuptools]
packages = ["brs_ctrl"]
[tool.setuptools.dynamic]
version = {attr = "brs_ctrl.__version__"}